--- a/Bass diffusion renewable energy technologies/database/db.properties
+++ b/Bass diffusion renewable energy technologies/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Thu Aug 31 18:19:03 CEST 2023
+#Tue Sep 12 15:47:27 CEST 2023
 tx_timestamp=0
-modified=yes
+modified=no
 version=2.4.1
