--- a/Energy system model/database/db.properties
+++ b/Energy system model/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Thu Aug 31 18:18:24 CEST 2023
+#Mon Sep 04 16:44:41 CEST 2023
 tx_timestamp=0
-modified=yes
+modified=no
 version=2.4.1
