--- a/Energy system model/database/db.properties
+++ b/Energy system model/database/db.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.4.1
-#Mon Sep 04 16:44:41 CEST 2023
+#HSQL Database Engine 2.5.0
+#Fri Dec 08 11:06:06 CET 2023
 tx_timestamp=0
 modified=no
-version=2.4.1
+version=2.5.0
