--- a/Energy transition tipping points/database/db.properties
+++ b/Energy transition tipping points/database/db.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.4.1
-#Mon Sep 04 16:54:08 CEST 2023
-tx_timestamp=0
+#HSQL Database Engine 2.7.1
+#Thu Jan 04 15:53:29 CET 2024
+tx_timestamp=226
 modified=no
-version=2.4.1
+version=2.7.1
