WIP: Utility functions

--- a/Heat transition neighborhood/database/db.properties
+++ b/Heat transition neighborhood/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Fri Feb 23 16:04:28 CET 2024
-tx_timestamp=469624
+#Mon May 13 17:22:05 CEST 2024
+tx_timestamp=864906
 modified=no
 version=2.7.1
