--- a/Heat transition neighborhood/database/db.properties
+++ b/Heat transition neighborhood/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Thu May 16 16:04:28 CEST 2024
-tx_timestamp=979929
+#Wed Nov 06 08:29:04 CET 2024
+tx_timestamp=1262841
 modified=no
 version=2.7.1
