updates on heating method selection

--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Tue Nov 19 21:25:14 CET 2024
-tx_timestamp=1270120
-modified=no
+#Tue Nov 26 18:43:04 CET 2024
+tx_timestamp=1277564
+modified=yes
 version=2.7.1
