--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Wed Dec 04 22:54:50 CET 2024
-tx_timestamp=1289737
-modified=yes
+#Fri Dec 06 19:19:46 CET 2024
+tx_timestamp=1308801
+modified=no
 version=2.7.1
