--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Thu Jan 16 13:37:15 CET 2025
-tx_timestamp=1361437
-modified=no
+#Mon Jan 20 18:29:40 CET 2025
+tx_timestamp=1454408
+modified=yes
 version=2.7.1
