Updates tvw strategies data

--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Mon Jan 20 18:29:40 CET 2025
-tx_timestamp=1454408
-modified=yes
+#Thu Jan 23 12:13:52 CET 2025
+tx_timestamp=1456270
+modified=no
 version=2.7.1
