--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Tue Mar 04 18:39:09 CET 2025
-tx_timestamp=1498219
-modified=no
+#Mon Mar 10 18:10:16 CET 2025
+tx_timestamp=1505293
+modified=yes-new-files
 version=2.7.1
