--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Mon Mar 10 18:10:16 CET 2025
-tx_timestamp=1505293
-modified=yes-new-files
+#Fri Mar 14 07:51:53 CET 2025
+tx_timestamp=2288017
+modified=no
 version=2.7.1
