--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Fri Mar 14 07:51:53 CET 2025
-tx_timestamp=2288017
+#Tue Apr 08 12:17:22 CEST 2025
+tx_timestamp=4859691
 modified=no
 version=2.7.1
