--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Wed May 14 18:09:23 CEST 2025
-tx_timestamp=9895350
-modified=no
+#Thu May 15 21:36:45 CEST 2025
+tx_timestamp=10549016
+modified=yes
 version=2.7.1
