Inititalisation order fixed and norm updates

--- a/Heat transition tipping pathways/database/db.properties
+++ b/Heat transition tipping pathways/database/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.1
-#Thu May 15 21:36:45 CEST 2025
-tx_timestamp=10549016
-modified=yes
+#Tue May 27 18:47:32 CEST 2025
+tx_timestamp=14175342
+modified=no
 version=2.7.1
